<?xml version="1.0"?>
<package>
  <name>hiwr_simple_example</name>
  <version>1.0.0</version>
  <maintainer email="lucile.peuch@worldline.com">lpeuch</maintainer>
  <description>The Japanexpo app</description>

  <license>Apache V2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>hiwr_msg</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>hiwr_msg</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
